# HashToCrack-Report

./: README.md  pyproject.toml
hashtocrack_report/: __init__.py  image_generation.py  main.py  report_writer.py
hashtocrack_report/resources/: template_EN.md  template_ES.md
