[project]
name = "HashToCrack-Report"
version = "1.0.0"
description = "Generate charts and reports from HashToCrack analytics"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib",
]

[project.scripts]
# This defines the CLI command name
HashToCrack-Report = "hashtocrack_report.main:main"

[tool.hatch.build.targets.wheel]
packages = ["hashtocrack_report"]

[tool.hatch.build.targets.wheel.force-include]
"hashtocrack_report/resources" = "hashtocrack_report/resources"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
